增加重启功能

--- a/Winform/Caist.Framework_Tools/Caist.Framework.Service/FrmMian.resx
+++ b/Winform/Caist.Framework_Tools/Caist.Framework.Service/FrmMian.resx
@@ -169,7 +169,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABE
-        CQAAAk1TRnQBSQFMAgEBAgEAAegBBAHoAQQBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        CQAAAk1TRnQBSQFMAgEBAgEAAfgBBAH4AQQBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -264,60 +264,27 @@
         /4CKWdpPoSjuxaag1ZQAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="tsbRestart.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
+        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
+        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
+        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
+        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
+        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
+        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
+        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
+        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
+        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
+</value>
+  </data>
   <metadata name="MqtTool.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>297, 59</value>
   </metadata>
   <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>687, 20</value>
   </metadata>
-  <data name="webStart.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJJSURBVDhPpVNdTJJRGKYfMzMlbvKm2WpmrbVc41ILbyI2
-        t8w21wXV6qKkbNVywY1/SUS4QiqtNnNKOSD7N6ZNEhGH1QYLMZrRYhoX8YFAGD8Z6dM54dqclbae7dm3
-        95z3ed7vnPc9rBksIlxKmEK4eCb+J6RIO5wQt1qHy+qfFJM4lZAaLRipNVoH3vuiuNI5gvKrZmOpRF1A
-        1wkXZLS8st2OUGIao5Ep9LuCqGobgrC2W8vbL9tC9uc1SpO02cDEp2H+lIDVn8DbUAJaiwdlyr7J3RX3
-        rm/OP5BN8pYR/tZoRUWzFZ7Id3SPfoX+Qwx6dwymj3H0j8VwqfMdSsQ94R2Hm6uz1m9dTfKp0ayLTj/Z
-        9Aqu0Dc8dEXQMRKFxjkB9VAYt+1h6BxhqG0BlDdZUSjSebaVKkVEQ4/1CyvLVBa8ZiZx580XtNoncNP6
-        GaqXQVw0+SE1Mqgf8OHa4DgUzzzgCjUgmoykNImMgzITDO4oGgYDuGwJQGH247zJh9rnXtT1MpAbvDik
-        fAHu3pZgLl9WTTRpSWkSmfvqjLjvDENOKsr6GJzrJULylZsYHLlhQ15xezyHf6GRnb19Hcmn4lmXyS6p
-        NOCWLYQaA/OzqtTow4mWYeTzdFMbBYq7nE1FtJ3phEsI50zqqiJxFxoGxlHV48UpzQh4xx5gg0BpzMoT
-        FpJ9el466n8ccc7O008heeTGrjN65PBVjjXco3vIOpuQvo9530YmT/QYuYLGsbUFZ4+TmEM4p9d/A/09
-        Wo2S9nfBwv8Ei/UDW8EoXZvV56AAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="webStop.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJsSURBVDhPY6A2YAJiFijNCBKAAhCbGYhZgRgkjywHBiAB
-        lospCU23U1Le7PHzyQDyQYpB4iDMejQ+JhskdyoxvhnIZ4eKwwHz6fjYtlcLpv7/efnA/+sNFf/XOjll
-        A8XZgJj9YEx4zrPJ3UC5g/9fzpvy/0hMVDtQHGQBHLBdCA9//+3Y+v9f1vb9/3Fk9f8LZfn/55mY528O
-        DCx42Nf2/+eZrf+/rOn9/2XHwv8gtUA9nBCtEMCyxNIy+3xO8v/P6yf//7iw+f/3/cv+n8pN/3+3ve7/
-        j+Pr/39a3AwWPxIR8H+CikYhUA/IdXAA8g/7NB29vKMxof/fL2z9/3Z6xf8v2+b8/7p97v930yv/v51W
-        /n+Pl+P/Vin5YqBaLqgeFAAS4GyXVy7eF+D1//Wkkv/Pm5OBOAVMb3Ow+F8pKF4BVMMDxKBYwgAgA7gm
-        6ZuVHk+O/f+0Of3/o5JwOD4WE/a/R9ekCqiGF4gxDABr7lY3KD4YE/H/WW/p/9spXv9vp0IxkP24OfP/
-        gbDg/61qelhdwdaqqFW8y9/3/4O6tP/Xohz/Xwfi5Sry/1doqoLZIHyvKPr/Di+P/3XyGpVAPSixwDNV
-        WuvjjZzI/5cDrf9f8rf6v0xJ7n8WC09tNgtX3TIlhf+XA6zA+Eq8z/8p0tofgXoEIFohgKNGWH7SemOj
-        /2c8zP4vlZP9n8fGA/IvPwjnsPHVLFWQ/3/G3fz/On3d/+VCclOB4twgjTAA8g9/MY/UpDYB8fc5EM18
-        UHGwXBaHQE09h+SHPF7JKUC+EFQcBYAEQPELchrIf8gKYHIgjaAABGUsagAGBgAAUgv3DP/xFAAAAABJ
-        RU5ErkJggg==
-</value>
-  </data>
-  <data name="webSend.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAH6SURBVDhPxZPtS1NxFMd/Jj3Y858VvZLoTVhWQjRFUssW
-        s1DJavgQk1zqdLrMNz1sc5UUEbpNh1TYG9OeiMhXWbrtzofdh3n39ZzfvYpGUEHQgc89h/v73u/vnANX
-        /IsoILbZFP4FrC8QfaGZ6EDkA+5E3ksCQ8w79IeZGdA5/MFp+B9Oo+fBW/juT8F3bwodg5MxaeQdfIPf
-        Rf4XtPlfgQy2i1sDk/KFsmQQOtKEVRuyTnNe1JGietZZgq+1x2DkTLi7J9hgh/AEXsPM55Fi0aJhw7WO
-        5CZSGR1fKo/gc0UxNMNEk3ecDXaK1t6XME020JAkUTLDeSsLNp/KDuPjqUNQ9VU0tMfZYJdwd00gt5qX
-        gvZAAp7+BG72JWjGcbT2jqHFF8e8okl+MGkNy2oOdW2jbFAkrnYkoFNLLFCWaV6G595Uf0+rNprMmRUD
-        TvcLNtgj6j0xZKklPmym25p9Mbi7orjRGcX126O45h2xPk6pmLPhpdY0PWeDvcLVMoKlbA5zJFpf3s9L
-        /JZUiexGnqddVdY/ZYN94iK1wq3zAhcYRSeBNfPG3IpqQZdYaHBcfmIZOFzh+LnGZ9Kx4sowyuuGcdb1
-        GGcuPUKZM4LTtUM4eSGM0vMhnKgJ4Xh1ECVVQRx13I3LJdqP/cQBm4N/AOt2E/w//NcQYg2/djhrFH5O
-        GAAAAABJRU5ErkJggg==
-</value>
-  </data>
   <metadata name="SystemImage.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>253, 16</value>
   </metadata>
@@ -326,7 +293,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABU
-        DQAAAk1TRnQBSQFMAgEBBQEAASABBQEgAQUBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        DQAAAk1TRnQBSQFMAgEBBQEAATABBQEwAQUBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -383,6 +350,60 @@
         AYcB4QYAAsMGAAHwAQ8GAAH4AR8GAAL/BgAC/wYAAv8CAAGAAQEC/wQAAYABAQH8AQMEAAGAAQEBAAED
         BAABgAEBAQABAwQAAYABAQEAAQMEAAGAAQEBAAEBBAABgAEBAQABAQQAAYABAQEAAQEEAAGAAQEGAAGA
         AQEBgAUAAYABAQGABQABgAEBAcAFAAGAAQEBwAUAAYABAQHABQABgAEBAeABBAQAAYABAQHwAX8L
+</value>
+  </data>
+  <metadata name="MqtTool.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>297, 59</value>
+  </metadata>
+  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>687, 20</value>
+  </metadata>
+  <data name="webStart.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJJSURBVDhPpVNdTJJRGKYfMzMlbvKm2WpmrbVc41ILbyI2
+        t8w21wXV6qKkbNVywY1/SUS4QiqtNnNKOSD7N6ZNEhGH1QYLMZrRYhoX8YFAGD8Z6dM54dqclbae7dm3
+        95z3ed7vnPc9rBksIlxKmEK4eCb+J6RIO5wQt1qHy+qfFJM4lZAaLRipNVoH3vuiuNI5gvKrZmOpRF1A
+        1wkXZLS8st2OUGIao5Ep9LuCqGobgrC2W8vbL9tC9uc1SpO02cDEp2H+lIDVn8DbUAJaiwdlyr7J3RX3
+        rm/OP5BN8pYR/tZoRUWzFZ7Id3SPfoX+Qwx6dwymj3H0j8VwqfMdSsQ94R2Hm6uz1m9dTfKp0ayLTj/Z
+        9Aqu0Dc8dEXQMRKFxjkB9VAYt+1h6BxhqG0BlDdZUSjSebaVKkVEQ4/1CyvLVBa8ZiZx580XtNoncNP6
+        GaqXQVw0+SE1Mqgf8OHa4DgUzzzgCjUgmoykNImMgzITDO4oGgYDuGwJQGH247zJh9rnXtT1MpAbvDik
+        fAHu3pZgLl9WTTRpSWkSmfvqjLjvDENOKsr6GJzrJULylZsYHLlhQ15xezyHf6GRnb19Hcmn4lmXyS6p
+        NOCWLYQaA/OzqtTow4mWYeTzdFMbBYq7nE1FtJ3phEsI50zqqiJxFxoGxlHV48UpzQh4xx5gg0BpzMoT
+        FpJ9el466n8ccc7O008heeTGrjN65PBVjjXco3vIOpuQvo9530YmT/QYuYLGsbUFZ4+TmEM4p9d/A/09
+        Wo2S9nfBwv8Ei/UDW8EoXZvV56AAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="webStop.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJsSURBVDhPY6A2YAJiFijNCBKAAhCbGYhZgRgkjywHBiAB
+        lospCU23U1Le7PHzyQDyQYpB4iDMejQ+JhskdyoxvhnIZ4eKwwHz6fjYtlcLpv7/efnA/+sNFf/XOjll
+        A8XZgJj9YEx4zrPJ3UC5g/9fzpvy/0hMVDtQHGQBHLBdCA9//+3Y+v9f1vb9/3Fk9f8LZfn/55mY528O
+        DCx42Nf2/+eZrf+/rOn9/2XHwv8gtUA9nBCtEMCyxNIy+3xO8v/P6yf//7iw+f/3/cv+n8pN/3+3ve7/
+        j+Pr/39a3AwWPxIR8H+CikYhUA/IdXAA8g/7NB29vKMxof/fL2z9/3Z6xf8v2+b8/7p97v930yv/v51W
+        /n+Pl+P/Vin5YqBaLqgeFAAS4GyXVy7eF+D1//Wkkv/Pm5OBOAVMb3Ow+F8pKF4BVMMDxKBYwgAgA7gm
+        6ZuVHk+O/f+0Of3/o5JwOD4WE/a/R9ekCqiGF4gxDABr7lY3KD4YE/H/WW/p/9spXv9vp0IxkP24OfP/
+        gbDg/61qelhdwdaqqFW8y9/3/4O6tP/Xohz/Xwfi5Sry/1doqoLZIHyvKPr/Di+P/3XyGpVAPSixwDNV
+        WuvjjZzI/5cDrf9f8rf6v0xJ7n8WC09tNgtX3TIlhf+XA6zA+Eq8z/8p0tofgXoEIFohgKNGWH7SemOj
+        /2c8zP4vlZP9n8fGA/IvPwjnsPHVLFWQ/3/G3fz/On3d/+VCclOB4twgjTAA8g9/MY/UpDYB8fc5EM18
+        UHGwXBaHQE09h+SHPF7JKUC+EFQcBYAEQPELchrIf8gKYHIgjaAABGUsagAGBgAAUgv3DP/xFAAAAABJ
+        RU5ErkJggg==
+</value>
+  </data>
+  <data name="webSend.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAH6SURBVDhPxZPtS1NxFMd/Jj3Y858VvZLoTVhWQjRFUssW
+        s1DJavgQk1zqdLrMNz1sc5UUEbpNh1TYG9OeiMhXWbrtzofdh3n39ZzfvYpGUEHQgc89h/v73u/vnANX
+        /IsoILbZFP4FrC8QfaGZ6EDkA+5E3ksCQ8w79IeZGdA5/MFp+B9Oo+fBW/juT8F3bwodg5MxaeQdfIPf
+        Rf4XtPlfgQy2i1sDk/KFsmQQOtKEVRuyTnNe1JGietZZgq+1x2DkTLi7J9hgh/AEXsPM55Fi0aJhw7WO
+        5CZSGR1fKo/gc0UxNMNEk3ecDXaK1t6XME020JAkUTLDeSsLNp/KDuPjqUNQ9VU0tMfZYJdwd00gt5qX
+        gvZAAp7+BG72JWjGcbT2jqHFF8e8okl+MGkNy2oOdW2jbFAkrnYkoFNLLFCWaV6G595Uf0+rNprMmRUD
+        TvcLNtgj6j0xZKklPmym25p9Mbi7orjRGcX126O45h2xPk6pmLPhpdY0PWeDvcLVMoKlbA5zJFpf3s9L
+        /JZUiexGnqddVdY/ZYN94iK1wq3zAhcYRSeBNfPG3IpqQZdYaHBcfmIZOFzh+LnGZ9Kx4sowyuuGcdb1
+        GGcuPUKZM4LTtUM4eSGM0vMhnKgJ4Xh1ECVVQRx13I3LJdqP/cQBm4N/AOt2E/w//NcQYg2/djhrFH5O
+        GAAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
